ingressrule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oneingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: a37ecc6694d5a4a05b5edc4e52462251-1777063413.ap-south-1.elb.amazonaws.com
    http:
      paths:
        
         -  path: /
            pathType: Prefix
            backend:
              service: 
                name: todoapp
                port:
                  number: 80
         -  path: /student
            pathType: Prefix
            backend:
              service: 
                name: seasonapp
                port:
                  number: 8080
